--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@ ul {
   margin: 0;
   padding-left: 0;
 }
+img {
+  display: block;
+}
 
 body {
   font-family: "Roboto", sans-serif;
@@ -34,6 +37,7 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
   padding-left: 156px;
+  border-bottom: 1px solid #E7E9FC;
 }
 
 .header-container {
@@ -45,6 +49,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  
 }
 
 .header-navigation {
@@ -150,6 +155,8 @@ body {
   max-width: 496px;
 }
 .hero-btn {
+  width: 169px;
+height: 56px;
   background: var(--color-iris);
   font-family: "Roboto"; sans-serif;
   font-style: normal;
@@ -160,6 +167,10 @@ body {
   color: var(--color-background);
   cursor: pointer;
   border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+
+
 
 
 }
@@ -177,6 +188,7 @@ body {
 }
 .feature-list {
   display: flex;
+  gap: 24px;
 
 }
 .feature-item {
@@ -222,9 +234,11 @@ body {
 
 .second-list {
   display: flex;
+  gap: 24px;
 }
 
 .second-item {
+ 
  
   
 }
@@ -251,10 +265,13 @@ body {
 
 .team-list {
   display: flex;
+  gap: 24px;
+
   
 }
 .team-item {
-  background: var(--color-background)
+  background: var(--color-background);
+  border-radius: 0px 0px 4px 4px;
   
 }
 .team-name {
@@ -346,12 +363,16 @@ padding-top: 96px;
 
 .btn-list {
   display: flex;
+  gap: 24px;
+  
  
  
 }
 .list {
 }
 .title-btn {
+  min-width: 116px;
+height: 48px;
   background: var(--color-grey);
   font-family: "Roboto"; sans-serif;
   font-weight: 600;
@@ -363,6 +384,10 @@ padding-top: 96px;
   color: var(--color-iris);
   cursor: pointer;
   border: none;
+  border: 1px solid #E7E9FC;
+border-radius: 4px;
+display: block;
+margin: 0 auto;
 }
 
 .title-btn:hover {
@@ -376,11 +401,19 @@ padding-top: 96px;
 
 
 .service-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+
   margin-top: 72px;
 }
 .list {
+ 
+ 
 }
 .list-img {
+  border: 1px solid #E7E9FC;
+  width: calc((100 - 24px) / 3);
   
 }
 .title-img {
