--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,6 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--color-background);
-  margin-bottom: 48px;
   max-width: 496px;
   margin: 0 auto;
 }
@@ -171,6 +170,7 @@ height: 56px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 margin: 0 auto;
+margin-top: 48px;
 
 
 
@@ -408,18 +408,9 @@ margin: 0 auto;
 
 .service-list {
   display: flex;
-  gap: 24px;
+  gap: 48px;
+  column-gap: 24px;
   flex-wrap: wrap;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
-  padding-right: 16px;
-  border-bottom: 1px solid #E7E9FC;
-  border-right:  1px solid #E7E9FC;
-  border-left: 1px solid #E7E9FC;
-
- 
-
   margin-top: 72px;
 }
 .list {
@@ -430,6 +421,16 @@ margin: 0 auto;
   
   width: calc((100 - 24px) / 3);
   
+}
+.class-img {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border: 1px solid #E7E9FC;
+  border-top: none;
+
+
 }
 .title-img {
   font-family: "Roboto"; sans-serif;
